Add personal data tab

--- a/src/main/resources/org/client/employeeAdding.fxml
+++ b/src/main/resources/org/client/employeeAdding.fxml
@@ -55,7 +55,7 @@
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Label fx:id="errorMessage" textFill="RED" />
+                <Label fx:id="errorMessage" textFill="red" />
             </children>
         </HBox>
     </children>
