--- a/src/main/resources/org/client/employeeDetails.fxml
+++ b/src/main/resources/org/client/employeeDetails.fxml
@@ -6,56 +6,46 @@
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="361.0" prefWidth="419.0" spacing="10.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.client.controllers.EmployeeDetailsController">
-<children>
-    <Label text="Детали">
-        <font>
-            <Font size="20.0" />
-        </font>
-    </Label>
-    <HBox alignment="CENTER_LEFT" spacing="30.0">
-        <children>
+   <children>
+      <Label text="Детали"><font><Font size="20.0" /></font></Label>
+      <HBox alignment="CENTER_LEFT" spacing="30.0">
+         <children>
             <VBox spacing="15.0">
-                <children>
-                    <Label text="Имя:" />
-                    <Label text="Фамилия:" />
-                    <Label layoutX="10.0" layoutY="47.0" text="Дата рождения:" />
-                    <Label layoutX="10.0" layoutY="47.0" text="Должность:" />
-                    <Label layoutX="10.0" layoutY="121.0" text="Зарплата:" />
-                    <Label layoutX="10.0" layoutY="84.0" text="Уровнь доступа:" />
-                    <Label layoutX="10.0" layoutY="121.0" text="Логин:" />
-                    <Label layoutX="10.0" layoutY="202.0" text="Почта:" />
-                </children>
+               <children>
+                  <Label text="Имя:" />
+                  <Label text="Фамилия:" />
+                  <Label layoutX="10.0" layoutY="47.0" text="Дата рождения:" />
+                  <Label layoutX="10.0" layoutY="47.0" text="Должность:" />
+                  <Label layoutX="10.0" layoutY="121.0" text="Зарплата:" />
+                  <Label layoutX="10.0" layoutY="84.0" text="Уровнь доступа:" />
+                  <Label layoutX="10.0" layoutY="121.0" text="Логин:" />
+                  <Label layoutX="10.0" layoutY="202.0" text="Почта:" />
+               </children>
             </VBox>
             <VBox layoutX="10.0" layoutY="10.0" spacing="15.0">
-                <children>
-                    <Label fx:id="detailName" />
-                    <Label fx:id="detailSurname" />
-                    <Label fx:id="detailBirthday" layoutX="10.0" layoutY="10.0" />
-                    <Label fx:id="detailPost" layoutX="10.0" layoutY="84.0" />
-                    <Label fx:id="detailSalary" layoutX="10.0" layoutY="121.0" />
-                    <Label fx:id="detailRole" layoutX="10.0" layoutY="158.0" />
-                    <Label fx:id="detailLogin" layoutX="10.0" layoutY="195.0" />
-                    <Label fx:id="detailMail" layoutX="10.0" layoutY="202.0" />
-                </children>
+               <children>
+                  <Label fx:id="detailName" />
+                  <Label fx:id="detailSurname" />
+                  <Label fx:id="detailBirthday" layoutX="10.0" layoutY="10.0" />
+                  <Label fx:id="detailPost" layoutX="10.0" layoutY="84.0" />
+                  <Label fx:id="detailSalary" layoutX="10.0" layoutY="121.0" />
+                  <Label fx:id="detailRole" layoutX="10.0" layoutY="158.0" />
+                  <Label fx:id="detailLogin" layoutX="10.0" layoutY="195.0" />
+                  <Label fx:id="detailMail" layoutX="10.0" layoutY="202.0" />
+               </children>
             </VBox>
-        </children>
-    </HBox>
-    <HBox alignment="CENTER" spacing="50.0">
-        <children>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" spacing="50.0">
+         <children>
             <Button fx:id="editButton" mnemonicParsing="false" text="Редактировать" textAlignment="CENTER">
-                <font>
-                    <Font size="14.0" />
-                </font>
+               <font><Font size="14.0" /></font>
             </Button>
             <Button fx:id="fireButton" mnemonicParsing="false" text="Уволить" textAlignment="CENTER">
-                <font>
-                    <Font size="14.0" />
-                </font>
+               <font><Font size="14.0" /></font>
             </Button>
-        </children>
-    </HBox>
-</children>
-<padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-</padding>
+         </children>
+      </HBox>
+   </children>
+   <padding><Insets bottom="20.0" left="20.0" right="20.0" top="20.0" /></padding>
 </VBox>
