--- a/src/main/resources/org/client/projectsPage.fxml
+++ b/src/main/resources/org/client/projectsPage.fxml
@@ -13,9 +13,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-
 <?import javafx.scene.layout.HBox?>
+
 <Tab closable="false" text="Проекты" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="org.client.controllers.ProjectsPageController">
    <content>
       <AnchorPane>
@@ -24,7 +23,7 @@
                <children>
                   <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField fx:id="searchField" alignment="CENTER" promptText="Поиск">
+                        <TextField fx:id="searchField" onAction="#search" alignment="CENTER" promptText="Поиск">
                            <font><Font size="14.0" /></font>
                         </TextField>
                         <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="221.0" text="Ваши проекты" textAlignment="RIGHT" />
@@ -86,7 +85,7 @@
                                                 <HBox>
                                                    <children>
                                                       <TextField fx:id="newTaskField" prefHeight="25.0" prefWidth="210.0" promptText="Новая задача" />
-                                                      <Button onAction="#addNewTask" mnemonicParsing="false" text="Добавить" />
+                                                      <Button onAction="#addTodoItem" mnemonicParsing="false" text="Добавить" />
                                                    </children>
                                                 </HBox>
                                              </children>
