--- a/src/main/resources/org/client/login.fxml
+++ b/src/main/resources/org/client/login.fxml
@@ -35,6 +35,7 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
+                  <Label fx:id="errorMessage" textFill="red"/>
                   <VBox>
                      <children>
                         <Label text="Логин:" />
